All basics implemented
